Complete fitness planner app

--- a/.gitignore
+++ b/.gitignore
@@ -1,127 +1,16 @@
-<<<<<<< HEAD
-# ============================================
-# Smart Fitness Planner - Git Ignore
-# ============================================
-
-# ============================================
 # Dependencies
-# ============================================
 node_modules/
-**/node_modules/
-package-lock.json
 
-# ============================================
 # Environment Variables
-# ============================================
 .env
-.env.local
-.env.development
-.env.production
-.env.*
 !.env.example
 
-# ============================================
 # Build Output
-# ============================================
 dist/
-build/
-out-tsc/
-tmp/
-*.js.map
 
-# ============================================
-# Angular
-# ============================================
+# Angular Cache
 .angular/
-frontend/.angular/
-frontend/dist/
 
-# ============================================
-# TypeScript
-# ============================================
-*.tsbuildinfo
-backend/dist/
-
-# ============================================
-# Logs
-# ============================================
-logs/
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# ============================================
-# Testing
-# ============================================
-coverage/
-.nyc_output/
-test-results/
-junit.xml
-
-# ============================================
 # OS Generated Files
-# ============================================
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
-desktop.ini
-
-# ============================================
-# IDE / Editor
-# ============================================
-.vscode/
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.idea/
-*.sublime-workspace
-*.sublime-project
-*.swp
-*.swo
-*~
-.project
-.classpath
-.settings/
-
-# ============================================
-# Cache
-# ============================================
-.cache/
-.parcel-cache/
-.eslintcache
-.npm/
-.yarn/
-
-# ============================================
-# Misc
-# ============================================
-*.pid
-*.seed
-*.pid.lock
-*.orig
-.temp/
-temp/
-
-# ============================================
-# Secrets & Credentials
-# ============================================
-*.pem
-*.key
-*.crt
-secrets/
-credentials/
-=======
-node_modules/
-dist/
-.env
-*.log
-.DS_Store
-
->>>>>>> 519f709e43c7e95fa57c44864e52a4317045d85b
