--- a/backend/package.json
+++ b/backend/package.json
@@ -1,41 +1,23 @@
 {
-<<<<<<< HEAD
   "name": "fitness-planner-backend",
   "version": "1.0.0",
-  "description": "Smart Fitness Routine & Meal Planner Backend",
-=======
-  "name": "smart-fitness-backend",
-  "version": "1.0.0",
-  "description": "Backend API for Smart Fitness Routine & Meal Planner",
->>>>>>> 519f709e43c7e95fa57c44864e52a4317045d85b
+  "description": "Smart Fitness Routine & Meal Planner Backend API",
   "main": "dist/server.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
-<<<<<<< HEAD
-    "dev": "ts-node-dev --respawn src/server.ts"
-  },
-=======
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "watch": "tsc --watch"
   },
-  "keywords": [
-    "fitness",
-    "meal-planner",
-    "api"
-  ],
+  "keywords": ["fitness", "meal-planner", "api"],
   "author": "",
   "license": "ISC",
->>>>>>> 519f709e43c7e95fa57c44864e52a4317045d85b
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-<<<<<<< HEAD
     "express-validator": "^7.0.1",
-=======
->>>>>>> 519f709e43c7e95fa57c44864e52a4317045d85b
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5"
   },
@@ -44,12 +26,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
-<<<<<<< HEAD
-    "@types/node": "^20.10.4",
-=======
     "@types/node": "^20.10.6",
-    "concurrently": "^9.2.1",
->>>>>>> 519f709e43c7e95fa57c44864e52a4317045d85b
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
